[package]
name = "cachemap3"
version = "0.0.1"
edition = "2021"
description = "A shared hashmap intended for caching values. Shorter lock times than dashmap"
authors = ["Conrad Ludgate <conradludgate@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/cachemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.14.3", default-features = false, features = ["raw"] }
lock_api = "0.4"
parking_lot = { version = "0.12", optional = true }
parking_lot_core = "0.9"

[features]
default = ["std"]
std = ["dep:parking_lot"]

[dev-dependencies]
parking_lot = "0.12"
hashbrown = { version = "0.14", features = ["ahash"] }

divan = "0.1.11"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
dashmap = "5"

[[bench]]
name = "zipf"
harness = false
